# hyperperf

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HyperBench.sln  HyperBench.vcxproj  HyperBench.vcxproj.filters  Makefile  README.md  cmake_install.cmake  cpuid.h  hayai_tests.cpp  hyperbench  main.cpp  perfutils.h  thread_tests.cpp  thread_tests.h
